bug 20218 - dim text in album art panel header when collapsed (r=nick)
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@17684 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/feathers/purplerain/chrome/skin/feathers.css
+++ b/feathers/purplerain/chrome/skin/feathers.css
@@ -800,6 +800,9 @@ sb-displaypane-splitter[orient="vertical"] > stack > box > label {
   color: rgb(191,191,191);
   font-size: 11px;
 }
+sb-displaypane-splitter[state="collapsed"] > stack > box > label {
+  color: rgb(58,58,58);
+}
 
 sb-displaypane-splitter[orient="vertical"][hovergrippy="true"] > stack > box > sb-displaypane-grippy {
   background-image: none;
